--- a/crashlog/src/main/AndroidManifest.xml
+++ b/crashlog/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
-<manifest package="com.simen.crashlog"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest
+    package="com.simen.crashlog"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:label="@string/app_name"
-        android:supportsRtl="true"/>
+        android:supportsRtl="true">
+    </application>
 
 </manifest>
